<resources>
    <string name="app_name" translatable="false">Keep Alive</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="permission_denied_go_to_settings_message">This permission is currently set to \"Not allowed\", so it can\'t be requested here. Please open Settings and allow it so that alerts can be sent.</string>
    <string name="enabled">Enabled</string>
    <string name="placeholder" translatable="false">PLACEHOLDER TEXT</string>
    <string name="webhook_get" translatable="false">GET</string>
    <string name="webhook_post" translatable="false">POST</string>
    <string name="webhook_url_hint">Webhook URL</string>
    <string name="webhook_http_method_hint">HTTP Method</string>
    <string name="webhook_verify_certificate_label">Verify Certificate</string>
    <string name="webhook_verify_certificate_warning">Warning: with certificate verification disabled, the connection is not protected against interception. Only use this with a trusted private server.</string>
    <string name="webhook_timeout_hint">Timeout (seconds)</string>
    <string name="webhook_retries_hint">Retries</string>
    <string name="webhook_include_location_hint">Include Location in Request?</string>
    <string name="webhook_headers_title">Headers</string>
    <string name="webhook_add_header_button">Add Header</string>
    <string name="webhook_remove_header_button">Remove Header</string>
    <string name="webhook_test_button">Test Webhook</string>
    <string name="webhook_toast_max_headers">Maximum number of headers reached (%1$s)</string>
    <string name="webhook_dialog_title">Webhook Configuration</string>
    <string name="webhook_dialog_description">When an Alert is triggered an HTTP request will be sent using the settings below. By default, no other data is included in the request. If enabled, location data is sent in the following format:\n{\"lat\": latitude, \"lon\": longitude, \"acc\": accuracy, \"address\": \"address\", \"loc_message\": \"location message\"}.</string>
    <string name="webhook_not_configured">Not Configured</string>
    <string name="webhook_location_do_not_include">Do Not Include</string>
    <string name="webhook_location_body_json">Body - JSON</string>
    <string name="webhook_location_body_form">Body - Form</string>
    <string name="webhook_location_query_parameters">Query Parameters</string>
    <string name="webhook_url_empty_error">Please enter a webhook URL</string>
    <string name="webhook_url_invalid_error">URL Invalid</string>
    <string name="webhook_url_invalid_error_with_url">URL Invalid: %1$s</string>
    <string name="webhook_timeout_invalid_error">Invalid timeout value</string>
    <string name="webhook_retries_invalid_error">Invalid retries value</string>
    <string name="webhook_timeout_max_error">Maximum timeout is %1$s</string>
    <string name="webhook_retries_max_error">Maximum retries is %1$s</string>
    <string name="webhook_header_name">Name</string>
    <string name="webhook_header_value">Value</string>
    <string name="webhook_header_name_empty_error">Name cannot be blank</string>
    <string name="webhook_header_name_length_error">Max Name length is %1$s</string>
    <string name="webhook_header_value_length_error">Max Value length is %1$s</string>
    <string name="webhook_header_name_invalid_error">Name has invalid characters</string>
    <string name="webhook_header_value_invalid_error">Value has invalid characters</string>
    <string name="webhook_request_success_toast_text">Success! Response code was %1$d</string>
    <string name="webhook_request_error_code_toast_text">Failed! Response code was %1$d</string>
    <string name="webhook_request_failure_toast_text">Failed! Error was %1$s</string>
    <string name="webhook_request_success_notification_title">Keep Alive Webhook Successful!</string>
    <string name="webhook_request_success_notification_text">Response code was %1$d</string>
    <string name="webhook_request_failure_notification_title">Keep Alive Webhook Failed!</string>
    <string name="webhook_request_failure_code_notification_text">Response code was %1$d</string>
    <string name="webhook_request_failure_error_notification_text">Error: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logdisplay">Debug Logs</string>
    <string name="about_dialog_title">About Keep Alive</string>
    <string name="about_message_content" translatable="false"><![CDATA[
    <br /><b>Version:</b><br />%1$s<br /><br />
    <b>Contact:</b><br />dev@keep-alive.io<br /><br />
    <b>Privacy Policy:</b><br /><a href="https://keep-alive.io/privacy">keep-alive.io/privacy</a><br /><br />
    <b>Github:</b><br /><a href="https://github.com/keepalivedev/KeepAlive">github.com/keepalivedev/KeepAlive</a><br /><br />
]]></string>
    <string name="enable_switch_enabled_content_desc">Entry %1$s Enabled</string>
    <string name="location_switch_enabled_content_desc">Entry %1$s Location Enabled</string>
    <string name="main_scroll_view_content_description">Scrollable Main Page</string>
    <string name="hibernation_dialog_title">Disable App Restriction</string>
    <string name="hibernation_dialog_message"><![CDATA[Android now automatically removes permissions for Apps that have not been used recently.  Keep Alive, once the settings are configured, does not need any further interaction and may have its permissions revoked.<br/><br/>To ensure that permissions are not revoked, please disable the <b>\'Manage app if unused\'</b> option for the Keep Alive app.]]></string>
    <string name="hibernation_dialog_message_api32"><![CDATA[Android now automatically removes permissions for apps that have not been used recently.  Keep Alive, once the settings are configured, does not need any further interaction and may have its permissions revoked.<br/><br/>To ensure that permissions are not revoked, please disable the <b>\'Pause app activity if unused\'</b> option for the Keep Alive app.]]></string>
    <string name="hibernation_dialog_message_api30"><![CDATA[Android now automatically removes permissions for Apps that have not been used recently.  Keep Alive, once the settings are configured, does not need any further interaction unless an Alert is triggered.<br/><br/>To ensure that permissions are not revoked, please navigate to the <b>Permissions</b> section for Keep Alive and disable the  <b>\'Remove permissions if app isn\'t used\'</b> option.]]></string>
    <string name="hibernation_dialog_message_api31"><![CDATA[Android now automatically removes permissions for Apps that have not been used recently.  Keep Alive, once the settings are configured, does not need any further interaction unless an Alert is triggered.<br/><br/>To ensure that permissions are not revoked, please disable the <b>\'Remove permissions and free up space\'</b> option for the Keep Alive app.]]></string>
    <string name="hibernation_dialog_message_api_backport"><![CDATA[Android now automatically removes permissions for Apps that have not been used recently.  Keep Alive, once the settings are configured, does not need any further interaction unless an Alert is triggered.<br/><br/>To ensure that permissions are not revoked, please disable the <b>\'Remove permissions if app isn\'t used\'</b> option.]]></string>
    <string name="monitoring_active_message">Last activity detected at: %1$s\nNext activity check in: %2$s</string>
    <string name="countdown_format_hours_minutes">%1$s h %2$s min</string>
    <string name="countdown_format_minutes">%1$s min</string>
    <string name="monitoring_active_title">Monitoring Active</string>
    <string name="monitoring_impaired_title">Monitoring Active\nBut May Be Impaired</string>
    <string name="monitoring_inactive_message">Monitoring is not active.\nClick the button to restart it.</string>
    <string name="monitoring_disabled_title">Monitoring Disabled</string>
    <string name="monitoring_disabled_message">Use the Settings to Enable</string>
    <string name="monitoring_no_activity_detected_title">Monitoring Not Possible</string>
    <string name="monitoring_permissions_required_title">Permissions Required</string>
    <string name="monitoring_no_activity_detected_message">Monitoring is enabled but no activity has been detected in the last %1$s hours. Please ensure you have a lock screen enabled and have granted Usage access permissions.</string>
    <string name="monitoring_no_recipient_title">No Alert Recipient</string>
    <string name="monitoring_no_recipient_message">Monitoring is running but no emergency contact is active, so no Alert can be sent. Please add or enable an emergency contact in the Settings.</string>
    <string name="monitoring_location_disabled_title">Location Services Off</string>
    <string name="monitoring_location_disabled_message">Monitoring is running but location services are turned off, so Alerts cannot include your location. Please turn on location in the device Settings or disable \"Include Location Information\" for your emergency contacts.</string>
    <string name="monitoring_background_restricted_message">Background activity for Keep Alive is restricted, so the activity checks may be delayed or never run and Alerts may not be sent. Please tap the button below and set Battery usage to \"Unrestricted\" or \"Optimized\".</string>
    <string name="monitoring_secondary_user_message">Keep Alive is installed in a secondary user profile. After a reboot it cannot run until you switch to this profile again, so no Alert can be sent until then.</string>
    <string name="monitoring_permissions_required_message">Monitoring is enabled but not all permissions have been granted. Please click the "Grant Permissions" button below.</string>
    <string name="main_header">Main Settings</string>
    <string name="contact_header">Emergency Contact Numbers</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="alert_message_title">Alert Message</string>
    <string name="include_location_title">Include Location</string>
    <string name="sample_alert_message">Sample Alert Message</string>
    <string name="include_location_information">Include Location Information</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="contact_label_title">Name or Relationship (Optional)</string>
    <string name="contact_label_hint">For example: Daughter</string>
    <string name="alert_message_hint">Enter Alert Message</string>
    <string name="enabled_title">Monitoring Enabled</string>
    <string name="time_period_title">Hours of Inactivity Before Prompt</string>
    <string name="followup_time_period_title">Minutes to Wait for Confirmation</string>
    <string name="exact_alarm_toggle_title">Use Exact Alarm Timing</string>
    <string name="exact_alarm_note">NOTE: This timing is not exact and the system may delay this notification by up to 1 hour.\n\nEnable \'Use Exact Alarm Timing\' below if you require precise checks, which may slightly increase battery usage.</string>
    <string name="contact_phone_title">Call Phone Number (Optional)</string>
    <string name="add_sms_contact_button_text">Add SMS Emergency Contact</string>
    <string name="monitored_apps_usage_history_message">These events may not always be a result of user activity. Please review them carefully before choosing this app.</string>
    <string name="monitored_apps_history_date_header">Used At</string>
    <string name="monitored_apps_history_name_header">Activity Name</string>
</resources>