<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/textColor"
        android:text="@string/monitored_apps_usage_history_message"
        android:paddingBottom="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monitored_apps_history_name_header"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/primary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monitored_apps_history_date_header"
            android:gravity="end"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/primary" />
    </LinearLayout>

    <ListView
        android:id="@+id/appDetailsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:layout_weight="1"/>
</LinearLayout>
